--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 	<!-- FullScreen -->
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
-			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Flatfy</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Clean & minimal Theme</h3>
+			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">台大氣球社 NTU balloon</h1>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Redefine Happiness In Your Life</h3>
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
+				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Our Facebook</span></a>
 				</li>
-				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Free Download</span></a>
+				<li id="download" ><a href="#downloadlink" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">Join now!</span></a>
 				</li>
 			</ul>
 		</div>    
@@ -91,7 +91,7 @@
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					
-					<li class="menuItem"><a href="#whatis">What is?</a></li>
+					<li class="menuItem"><a href="#whatis">關於我們</a></li>
 					<li class="menuItem"><a href="#useit">Use It</a></li>
 					<li class="menuItem"><a href="#screen">Screenshot</a></li>
 					<li class="menuItem"><a href="#credits">Credits</a></li>
