--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
  
-    <!-- Custom Google Web Font 
+    <!-- Custom Google Web Font -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
-	-->
+	
 	
 
 <!-- Custom CSS-->
     <link href="css/general.css" rel="stylesheet">
-    
+    <link href="css/site.css" rel="stylesheet">
 	
 	 <!-- Owl-Carousel -->
     <link href="css/custom.css" rel="stylesheet">
@@ -39,7 +39,7 @@
 	<!-- Magnific Popup core CSS file -->
 	<link rel="stylesheet" href="css/magnific-popup.css"> 
 
-<link href="css/site.css" rel="stylesheet">
+
 	
 	<script src="js/modernizr-2.8.3.min.js"></script>  <!-- Modernizr /-->
 	<!--[if IE 9]>
