--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 	<!-- Magnific Popup core CSS file -->
 	<link rel="stylesheet" href="css/magnific-popup.css"> 
+	<link rel="stylesheet" href="css/site.css"> 
 
 
 	
