--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
-<!--[if gt IE 9]><!--> <html> <!--<![endif]-->
+<!--[if gt IE 9]><!--> <!--<![endif]-->
+
+
+<html xmlns:og='http://ogp.me/ns#'>
+<meta property="og:title" content="NTUBDC 台大氣球社"></meta>
+<meta property="og:type" content="社團網站"></meta>
+<meta property="og:url" content="https://dragonkiss81.github.io/NTUballoon/"></meta>
+<meta property="og:image" content="https://dragonkiss81.github.io/NTUballoon/img/slide/1.jpg"></meta>
+
+<meta property="og:description" content="Redefine Happiness In Your Life"></meta>
+<meta property="og:site_name" content="NTUBDC 台大氣球社"></meta>
+
+
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="Redefine Happiness In Your Life">
     <meta name="author" content="Mr. Opengate">
 
+    <link rel="Shortcut Icon" type="image/x-icon" href="img/icon/top_icon.png"/>
     <title>NTUBDC 台大氣球社</title>
 
     <!-- Bootstrap core CSS -->
