--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
 	<meta property="og:title" content="NTUBDC 台大氣球社"></meta>
 	<meta property="og:type" content="社團網站"></meta>
 	<meta property="og:url" content="https://dragonkiss81.github.io/NTUballoon/"></meta>
-	<meta property="og:image" content="https://dragonkiss81.github.io/NTUballoon/img/slide/1.jpg"></meta>
-
+	<meta property="og:image" content="https://dragonkiss81.github.io/NTUballoon/img/slide/fb.png"></meta>
 	<meta property="og:description" content="Redefine Happiness In Your Life"></meta>
-	<meta property="og:site_name" content="NTUBDC 台大氣球社"></meta>
 
 
     <!-- Bootstrap core CSS -->
