add google sheet

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
     <title>NTUBDC 台大氣球社</title>
 
 	<meta property="og:title" content="NTUBDC 台大氣球社"></meta>
-	<meta property="og:type" content="社團網站"></meta>
-	<meta property="og:url" content="https://dragonkiss81.github.io/NTUballoon/"></meta>
 	<meta property="og:image" content="https://dragonkiss81.github.io/NTUballoon/img/slide/fb.png"></meta>
 	<meta property="og:description" content="Redefine Happiness In Your Life"></meta>
 
@@ -76,7 +74,7 @@
             <h1 class="h2_home wow fadeIn" data-wow-delay="0.4s">NTUBDC 台大氣球社</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Redefine Happiness In Your Life</h3>
 			<ul class="list-inline intro-social-buttons">
-				<li><a href="" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">加入我們!</span></a>
+				<li><a href="http://goo.gl/forms/gGKQ82PiwQZl8aJx2" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">加入我們!</span></a>
 				</li>
 				<li id="download" ><a href="https://www.facebook.com/%E5%8F%B0%E5%A4%A7%E6%B0%A3%E7%90%83%E7%A4%BENTUBDC-423960331057203/" class="btn  btn-lg mybutton_standard wow swing wow fadeIn" data-wow-delay="1.2s"><span class="network-name">粉絲專頁</span></a>
 				</li>
@@ -430,7 +428,7 @@
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>歡迎你的加入！</h2>
 				<p class="lead" style="margin-top:0">分享喜悅、夢想啟程</p>
-				<p><a class="btn wow tada btn-embossed btn-primary" role="button">現在報名!</a></p> 
+				<p><a href="http://goo.gl/forms/gGKQ82PiwQZl8aJx2" class="btn wow tada btn-embossed btn-primary" role="button">現在報名!</a></p> 
 			 	</div>
 			</div>
 		</div>
