fixed bug : taco

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/head/2.png" alt="Generic placeholder image">
-				   <h3>詹于瑾</h3>
+				   <h3>詹于槿</h3>
 				   <div class="sub-title lead3">副社長</div>
 				   <p class="lead">貧窮與社會工作ing</p>
 				   
